// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Okta Verify FP Loopback Poll where chromeLocalNetworkAccessDetails are defined should create Loopback Poll elements for display when permission state is "denied" and loopback is triggered by registered condition silent probe 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "cancelStep": "authenticatorChallenge-cancel",
          "deviceChallengePayload": {
            "challengeRequest": "mockChallengeRequest",
            "chromeLocalNetworkAccessDetails": {
              "chromeLNAHelpLink": "https://okta.com",
            },
            "domain": "http://localhost",
            "ports": [
              "2000",
              "6511",
              "6512",
              "6513",
            ],
          },
          "step": "device-challenge-poll",
        },
        "type": "LoopbackProbe",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "authenticatorChallenge-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify FP Loopback Poll where chromeLocalNetworkAccessDetails are defined should create Loopback Poll elements for display when permission state is "granted" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "cancelStep": "authenticatorChallenge-cancel",
          "deviceChallengePayload": {
            "challengeRequest": "mockChallengeRequest",
            "chromeLocalNetworkAccessDetails": {
              "chromeLNAHelpLink": "https://okta.com",
            },
            "domain": "http://localhost",
            "ports": [
              "2000",
              "6511",
              "6512",
              "6513",
            ],
          },
          "step": "device-challenge-poll",
        },
        "type": "LoopbackProbe",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "authenticatorChallenge-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify FP Loopback Poll where chromeLocalNetworkAccessDetails are defined should create Loopback Poll elements for display when permission state is "prompt" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "cancelStep": "authenticatorChallenge-cancel",
          "deviceChallengePayload": {
            "challengeRequest": "mockChallengeRequest",
            "chromeLocalNetworkAccessDetails": {
              "chromeLNAHelpLink": "https://okta.com",
            },
            "domain": "http://localhost",
            "ports": [
              "2000",
              "6511",
              "6512",
              "6513",
            ],
          },
          "step": "device-challenge-poll",
        },
        "type": "LoopbackProbe",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "authenticatorChallenge-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify FP Loopback Poll where chromeLocalNetworkAccessDetails are defined should create error remediation elements when permission state is "denied" and loopback is not triggered by registered condition silent probe 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "chrome.lna.fastpass.requires.permission.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "class": "ERROR",
          "message": [
            {
              "message": "chrome.lna.error.description.part1",
              "title": "chrome.lna.error.title",
            },
            {
              "message": "chrome.lna.error.description.part2",
            },
            {
              "message": "chrome.lna.error.description.more.information",
            },
          ],
        },
        "type": "InfoBox",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "authenticatorChallenge-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify FP Loopback Poll where remediation is challenge-poll should create Loopback Poll elements for display 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "cancelStep": "currentAuthenticator-cancel",
          "deviceChallengePayload": {
            "challengeRequest": "mockChallengeRequest",
            "domain": "http://localhost",
            "ports": [
              "2000",
              "6511",
              "6512",
              "6513",
            ],
          },
          "step": "challenge-poll",
        },
        "type": "LoopbackProbe",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "currentAuthenticator-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify FP Loopback Poll where remediation is device-challenge-poll should create Loopback Poll elements for display when step is device-challenge-poll 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "cancelStep": "authenticatorChallenge-cancel",
          "deviceChallengePayload": {
            "challengeRequest": "mockChallengeRequest",
            "domain": "http://localhost",
            "ports": [
              "2000",
              "6511",
              "6512",
              "6513",
            ],
          },
          "step": "device-challenge-poll",
        },
        "type": "LoopbackProbe",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "actionParams": {
            "reason": "USER_CANCELED",
            "statusCode": null,
          },
          "isActionStep": true,
          "label": "goback",
          "step": "authenticatorChallenge-cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
